# flask-docker-terraform-aws

./: Dockerfile  README.md  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
flask-app/: app.py
