[tool.poetry]
name = "flask-docker-terraform-aws"
version = "0.1.0"
description = "Flask application deployed with Docker and Terraform"
authors = ["garrett-does-code <garrett.codes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
